--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reminder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://saahil.github.io/reminder",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gh-pages-deploy": "^0.5.1",
@@ -19,6 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
